--- a/views/koala.ejs
+++ b/views/koala.ejs
@@ -18,7 +18,7 @@
 <div class = 'container koala-grid'>
     <div class="row">
         <div class="col-md-4">
-            <img src="/images/Koala.jpg">
+            <img src="/images/koala.jpg">
         </div>
         <div class="col-md-5">
             <div class="row">
@@ -40,7 +40,7 @@
 
         </div>
         <div class="col-md-4">
-            <img src="/images/Koala.jpg">
+            <img src="/images/koala.jpg">
         </div>
     </div>
 
